Adding link to node demo

--- a/django-project/public/index.html
+++ b/django-project/public/index.html
@@ -55,6 +55,7 @@
                 View other demos:
                 <br />
                 <a href="http://demo.visualcaptcha.net/"><strong>PHP</strong></a> |
+                <a href="http://node.demo.visualcaptcha.net/"><strong>Node</strong></a> |
                 <a href="http://ruby.demo.visualcaptcha.net/"><strong>Ruby</strong></a> |
                 <a href="http://meteor.demo.visualcaptcha.net/"><strong>Meteor</strong></a> |
                 <a href="http://multiple.demo.visualcaptcha.net/"><strong>Multiple</strong></a>
