Updating JS and HTML for accessibility.

--- a/django-project/public/index.html
+++ b/django-project/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="visualcaptcha, captcha, django, python, vanilla, vanilla js, turing test, mobile-friendly, accessible, accessibility, retina-friendly, better captcha, fancy captcha, captcha alternative, demo">
     <meta name="description" content="A cool visual captcha Vanilla JS plugin. Mobile-friendly. Retina-ready. Accessible.">
-    
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Mobile Specific Metas -->
@@ -43,11 +43,11 @@
                     <input type="text" class="form-control" placeholder="Name">
                     <div id="status-message"></div>
                     <div id="sample-captcha"></div>
-                    <a id="check-is-filled" class='info-btn'>Check if visualCaptcha is filled</a>
+                    <a href="#" id="check-is-filled" class='info-btn'>Check if visualCaptcha is filled</a>
                     <button type="submit" name="submit-bt" class="submit">Submit form</button>
                 </form>
             </div>
-        </div> 
+        </div>
         <div class="links">
             <p class="txt-center">
                 <a href="/" target="_blank"><b>visualCaptcha</b></a> by <a href="http://emotionloop.com/" target="_blank"><b>emotionLoop</b></a>
