--- a/django-project/public/index.html
+++ b/django-project/public/index.html
@@ -57,7 +57,7 @@
                 <br />
                 <a href="http://demo.visualcaptcha.net/"><strong>PHP</strong></a> |
                 <a href="http://node.demo.visualcaptcha.net/"><strong>Node</strong></a> |
-                <a href="http://ruby.demo.visualcaptcha.net/"><strong>Ruby</strong></a> |
+                <a href="https://github.com/emotionLoop/visualCaptcha-ruby"><strong>Ruby</strong></a> |
                 <a href="http://multiple.demo.visualcaptcha.net/"><strong>Multiple</strong></a>
                 <br />
                 You can get it (and more languages) at <a href="https://github.com/emotionLoop/visualCaptcha" target="_blank"><b>GitHub</b></a>
